// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Component The component renders an empty li when the sections prop is not supplied 1`] = `
<div>
  <ul>
    <li>
      <button
        onClick={[Function]}
        type="submit"
      >
        Vegan
      </button>
    </li>
    <li>
      <button
        onClick={[Function]}
        type="submit"
      >
        Octo-Ovo Vegetarian
      </button>
    </li>
    <li>
      <button
        onClick={[Function]}
        type="submit"
      >
        Omnivour
      </button>
    </li>
  </ul>
</div>
`;

exports[`Accordion Component only opens the last section when multiple sections have been clicked 1`] = `
<div>
  <ul>
    <li
      key="0"
    >
      <button
        onClick={[Function]}
        type="submit"
      >
        Vegan
      </button>
    </li>
    <li
      key="1"
    >
      <button
        onClick={[Function]}
        type="submit"
      >
        Octo-Ovo Vegetarian
      </button>
    </li>
    <li
      key="2"
    >
      <button
        onClick={[Function]}
        type="submit"
      >
        Omnivour
      </button>
      <p>
        plants and aninimals
      </p>
    </li>
  </ul>
</div>
`;

exports[`Accordion Component opens a clicked section 1`] = `
<div>
  <ul>
    <li
      key="0"
    >
      <button
        onClick={[Function]}
        type="submit"
      >
        Vegan
      </button>
    </li>
    <li
      key="1"
    >
      <button
        onClick={[Function]}
        type="submit"
      >
        Octo-Ovo Vegetarian
      </button>
    </li>
    <li
      key="2"
    >
      <button
        onClick={[Function]}
        type="submit"
      >
        Omnivour
      </button>
      <p>
        plants and aninimals
      </p>
    </li>
  </ul>
</div>
`;

exports[`Accordion Component renders an empty li when the sections prop is not supplied 1`] = `
<div>
  <ul>
    <li>
      <button
        onClick={[Function]}
        type="submit"
      >
        Vegan
      </button>
    </li>
    <li>
      <button
        onClick={[Function]}
        type="submit"
      >
        Octo-Ovo Vegetarian
      </button>
    </li>
    <li>
      <button
        onClick={[Function]}
        type="submit"
      >
        Omnivour
      </button>
    </li>
  </ul>
</div>
`;

exports[`Accordion Component renders no sections as active by default 1`] = `
<div>
  <ul>
    <li
      key="0"
    >
      <button
        onClick={[Function]}
        type="submit"
      >
        Vegan
      </button>
    </li>
    <li
      key="1"
    >
      <button
        onClick={[Function]}
        type="submit"
      >
        Octo-Ovo Vegetarian
      </button>
    </li>
    <li
      key="2"
    >
      <button
        onClick={[Function]}
        type="submit"
      >
        Omnivour
      </button>
    </li>
  </ul>
</div>
`;
